# disrupt-rs

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: build_and_test.yml
benches/: counters.rs  mpsc.rs  poller.rs  spin_window.rs  spsc.rs
examples/: consumer_dependency_graph.rs  different_event_types.rs  event_poller.rs  event_poller_dependency_gate.rs  pinning_threads_and_dependencies.rs  processor_with_state.rs  single_and_batch_publication.rs  splitting_workload_across_processors.rs
src/: affinity.rs  builder.rs  consumer.rs  event_handler.rs  lib.rs  producer.rs  ringbuffer.rs  sequence.rs  wait_strategies.rs
src/builder/: multi.rs  single.rs
src/consumer/: event_poller.rs
src/producer/: multi.rs  single.rs
tests/: event_handler_traits.rs
