[package]
name = "disrupt-rs"
version = "1.1.0"
authors = ["Denis Tsai <denistsai@aetheras.io>"]
description = "Concurrent Ringbuffer inspired by the LMAX Disruptor."
repository = "https://github.com/dt665m/disrupt-rs"
edition = "2024"
categories = ["data-structures", "concurrency"]
keywords = ["disruptor", "ringbuffer", "message", "mpmc", "spmc"]
license = "MIT"

[dependencies]
crossbeam-utils = "0.8"
core_affinity = "0.8.1"
thiserror = "2.0"
parking_lot = "0.12.5"

[dev-dependencies]
criterion = "0.8"
crossbeam = "0.8"

[[bench]]
name = "spsc"
harness = false

[[bench]]
name = "mpsc"
harness = false

[[bench]]
name = "poller"
harness = false

[[bench]]
name = "counters"
harness = false

[[bench]]
name = "spin_window"
harness = false
